Upgrade to Java8+ features
Optimizations methods