@@ -4,86 +4,77 @@ import java.util.ArrayList;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
+import java.util.stream.IntStream;
 
 public class HandEvaluator {
 
     public static int flush(Hand hand) {
-        List<Card> cards = hand.getCARDS();
-        int score = 0;
-        for (int i = 0; i < cards.size(); i++) {
-            if (i > 0 && !cards.get(i).getSUIT().equals(cards.get(i - 1).getSUIT()))
-                return 0;
-            score += cards.get(i).getVALUE();
-        }
-        return score;
+        List<Card> cards = hand.getCards();
+        if (cards.stream().allMatch(card -> card.getSuit().equals(cards.get(0).getSuit())))
+            return cards.stream().mapToInt(Card::getValue).sum();
+        return 0;
     }
 
     public static int straight(Hand hand) {
-        if (hasAce(hand) && aceOut(hand) == 14) {
+        if (hasAce(hand) && aceOut(hand) == 14)
             return 15;
-        }
         return straightResearch(hand);
     }
 
     public static int aceOut(Hand hand) {
+        List<Card> cards = hand.getCards();
         int score = 0;
-        for (int i = 0; i < hand.getCARDS().size() - 2; i++) {
-            Card courrentCard = hand.getCARDS().get(i);
-            Card nextCard = hand.getCARDS().get(i + 1);
-            if (isConsecutive(courrentCard, nextCard))
-                score += courrentCard.getVALUE();
+        for (int i = 0; i < cards.size() - 1; i++) {
+            Card currentCard = cards.get(i);
+            Card nextCard = cards.get(i + 1);
+            if (isConsecutive(currentCard, nextCard))
+                score += currentCard.getValue();
             else
                 return 0;
         }
-        score += hand.getCARDS().get(hand.getCARDS().size() - 2).getVALUE();
-        return score;
+        return score + cards.get(cards.size() - 1).getValue();
     }
 
     public static int straightResearch(Hand hand) {
-        List<Card> cards = hand.getCARDS();
+        List<Card> cards = hand.getCards();
         int score = 0;
         for (int i = 0; i < cards.size() - 1; i++) {
             Card currentCard = cards.get(i);
             Card nextCard = cards.get(i + 1);
             if (!isConsecutive(currentCard, nextCard))
                 return 0;
-            score += currentCard.getVALUE();
+            score += currentCard.getValue();
         }
-        return score + cards.getLast().getVALUE();
+        return score + cards.get(cards.size() - 1).getValue();
     }
 
     private static boolean hasAce(Hand hand) {
-        for (int i = 0; i < hand.getCARDS().size(); i++) {
-            if (hand.getCARDS().get(i).getRANK().equals("A"))
-                return true;
-        }
-        return false;
+        return hand.getCards().stream().anyMatch(card -> card.getRank().equals("A"));
     }
 
     public static int straightFlush(Hand hand) {
-        if (flush(hand) > 0 && straight(hand) > 0) {
-            return straight(hand);
-        }
+        int straightScore = straight(hand);
+        if (flush(hand) > 0 && straight(hand) > 0)
+            return straightScore;
         return 0;
     }
 
     public static int royalFlush(Hand hand) {
-        if (flush(hand) > 0 && straightResearch(hand) == 60)
-            return flush(hand);
-        return 0;
+        return flush(hand) > 0 && straightResearch(hand) == 60 ? flush(hand) : 0;
     }
 
     public static int fourOfAKind(Hand hand) {
-        if (findVariations(hand) != 1) return 0;
+        if (findVariations(hand) != 1)
+            return 0;
         Map<String, Integer> cardFrequencies = new HashMap<>();
-        for (Card card : hand.getCARDS()) {
-            String rank = card.getRANK();
+        for (Card card : hand.getCards()) {
+            String rank = card.getRank();
             cardFrequencies.put(rank, cardFrequencies.getOrDefault(rank, 0) + 1);
         }
-        for (Card card : hand.getCARDS()) {
-            String rank = card.getRANK();
+        for (Card card : hand.getCards()) {
+            String rank = card.getRank();
             if (cardFrequencies.get(rank) == 4)
-                return card.getVALUE() * 4;
+                return card.getValue() * 4;
         }
         return 0;
     }
@@ -91,13 +82,7 @@ public class HandEvaluator {
     public static int fullHouse(Hand hand) {
         if (findVariations(hand) != 1 || fourOfAKind(hand) > 0)
             return 0;
-        else {
-            int score = 0;
-            for (Card card : hand.getCARDS()) {
-                score += card.getVALUE();
-            }
-            return score;
-        }
+        return hand.getCards().stream().mapToInt(Card::getValue).sum();
     }
 
     public static int threeOfAKind(Hand hand) {
@@ -105,14 +90,14 @@ public class HandEvaluator {
             return 0;
         else {
             Map<String, Integer> cardFrequencies = new HashMap<>();
-            for (Card card : hand.getCARDS()) {
-                String rank = card.getRANK();
+            for (Card card : hand.getCards()) {
+                String rank = card.getRank();
                 cardFrequencies.put(rank, cardFrequencies.getOrDefault(rank, 0) + 1);
             }
-            for (Card card : hand.getCARDS()) {
-                String rank = card.getRANK();
+            for (Card card : hand.getCards()) {
+                String rank = card.getRank();
                 if (cardFrequencies.get(rank) == 3)
-                    return card.getVALUE() * 3;
+                    return card.getValue() * 3;
             }
             return 0;
         }
@@ -128,7 +113,7 @@ public class HandEvaluator {
             for (List<Card> group : cardGroups.values()) {
                 if (group.size() == 2) {
                     pairCount++;
-                    score += group.getFirst().getVALUE() * 2;
+                    score += group.getFirst().getValue() * 2;
                 }
             }
             if (pairCount == 2)
@@ -145,7 +130,7 @@ public class HandEvaluator {
         int maxPairValue = 0;
         for (List<Card> group : cardGroups.values()) {
             if (group.size() == 2) {
-                int pairValue = group.getFirst().getVALUE() * 2;
+                int pairValue = group.getFirst().getValue() * 2;
                 if (pairValue > maxPairValue) maxPairValue = pairValue;
             }
         }
@@ -154,37 +139,27 @@ public class HandEvaluator {
 
     private static Map<String, List<Card>> groupValues(Hand hand) {
         Map<String, List<Card>> cardGroups = new HashMap<>();
-        for (Card card : hand.getCARDS()) {
-            String rank = card.getRANK();
+        for (Card card : hand.getCards()) {
+            String rank = card.getRank();
             cardGroups.computeIfAbsent(rank, k -> new ArrayList<>()).add(card);
         }
         return cardGroups;
     }
 
     public static int highCard(Hand hand) {
-        if (findVariations(hand) != 4) {
+        if (findVariations(hand) != 4)
             return 0;
-        } else {
-            int max = 0;
-            for (Card card : hand.getCARDS()) {
-                if (card.getVALUE() > max)
-                    max = card.getVALUE();
-            }
-            return max;
-        }
+        return hand.getCards().stream().mapToInt(Card::getValue).max().orElse(0);
     }
 
     public static int findVariations(Hand hand) {
-        int variations = 0;
-        for (int i = 0; i < hand.getCARDS().size() - 1; i++) {
-            boolean condition = hand.getCARDS().get(i).getVALUE() == hand.getCARDS().get(i + 1).getVALUE();
-            if (!condition)
-                variations++;
-        }
-        return variations;
+        List<Card> cards = hand.getCards();
+        return (int) IntStream.range(0, cards.size() - 1)
+                .filter(i -> cards.get(i).getValue() != cards.get(i + 1).getValue())
+                .count();
     }
 
     public static boolean isConsecutive(Card courrentCard, Card nextCard) {
-        return courrentCard.getVALUE() == nextCard.getVALUE() - 1;
+        return courrentCard.getValue() == nextCard.getValue() - 1;
     }
 }
